--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,7 +16,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  Clone:
+  Clone and Build:
     runs-on: pjlab_ascend_910B
     steps:
       - name: Checkout code
@@ -39,6 +39,21 @@ jobs:
         run: |
           set -ex
           mv $GITHUB_WORKSPACE/* ${{ env.CI_PATH }}/
+
+      - name: Build InferExt
+        run: |
+          set -ex
+          cd ${{ env.CI_PATH }}/InferExt
+          pip uninstall infer_ext
+          pip install -r requirements.txt
+          DEVICE=ascend python3 setup.py develop
+      
+      - name: Clone lmdeploy
+        run: |
+          set -ex
+          git clone https://github.com/DeepLink-org/lmdeploy.git -b infer_ext ${{ env.CI_PATH }}
+          export PYTHONPATH=${{ env.CI_PATH }}/lmdeploy:$PYTHONPATH
+
 
   Tests:
     runs-on: pjlab_ascend_910B
