--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -43,9 +43,9 @@ jobs:
       - name: Build InferExt
         run: |
           set -ex
-          cd ${{ env.CI_PATH }}/InferExt
+          cd ${{ env.CI_PATH }}
           pip uninstall infer_ext
-          pip install -r requirements.txt
+          pip install -r requirements.txt --index-url https://download.pytorch.org/whl/cpu
           DEVICE=ascend python3 setup.py develop
       
       - name: Clone lmdeploy
