--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -46,7 +46,7 @@ jobs:
           cd ${{ env.CI_PATH }}
           pip uninstall infer_ext
           pip install -r requirements.txt --index-url https://download.pytorch.org/whl/cpu
-          DEVICE=ascend python3 setup.py develop
+          DEVICE=ascend python3 setup.py install --user
       
       - name: Clone lmdeploy
         run: |
