--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,7 +10,7 @@ on:
 
 env:
   CI_PATH: '/data2/wugeshui/GitHub/${{ github.repository }}/${GITHUB_RUN_NUMBER}'
-  LMDEPLOY_PATH: '/data2/wugeshui/GitHub/lmdeploy/${GITHUB_RUN_NUMBER}'
+  LMDEPLOY_PATH: '/data2/wugeshui/GitHub/lmdeploy/'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -41,14 +41,24 @@ jobs:
           set -ex
           mv $GITHUB_WORKSPACE/* ${{ env.CI_PATH }}/
 
-      - name: Build InferExt
+      - name: Build and install InferExt
         run: |
           set -ex
           cd ${{ env.CI_PATH }}
-          pip uninstall infer_ext
+          echo "y" | pip uninstall infer_ext
           pip install -r requirements.txt --index-url https://download.pytorch.org/whl/cpu
           DEVICE=ascend python3 setup.py install --user
       
+      - name: Make and clean directory for lmdeploy
+        run: |
+          set -ex
+          echo ${{ env.LMDEPLOY_PATH }}
+          mkdir -p ${{ env.LMDEPLOY_PATH }}
+          set -ex
+          if [ -d "${{ env.LMDEPLOY_PATH }}" ]; then
+            rm -rf ${{ env.LMDEPLOY_PATH }}/*
+          fi
+
       - name: Clone lmdeploy
         run: |
           set -ex
