--- a/tests/config.yaml
+++ b/tests/config.yaml
@@ -5,6 +5,6 @@ tp_config:
     Mixtral-8x7B-Instruct-v0.1: 2
 
 pytorch_chat_model:
-    - internlm_model_data/internlm2-chat-7b
+    # - internlm_model_data/internlm2-chat-7b
     - llama_model_data/llama-2-7b-chat-hf
     - mixtral_model_data/Mixtral-8x7B-Instruct-v0.1
