--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -73,8 +73,7 @@ jobs:
       - name: RunTests
         run: |
           set -ex
-          source /usr/local/Ascend/ascend-toolkit/set_env.sh
-          export PYTHONPATH=${{env.LMDEPLOY_PATH }}:$PYTHONPATH && echo $PYTHONPATH
+          export PYTHONPATH=/data2/wugeshui/.local/lib/python3.10/site-packages:${{env.LMDEPLOY_PATH }}:$PYTHONPATH && echo $PYTHONPATH
           cd ${{env.CI_PATH }}
           pytest tests -x --alluredir=allure-results --clean-alluredir
 
