--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -61,7 +61,7 @@ jobs:
       - name: Clone lmdeploy
         run: |
           set -ex
-          git clone https://github.com/DeepLink-org/lmdeploy.git -b infer_ext ${{ env.LMDEPLOY_PATH }}
+          git clone https://github.com/DeepLink-org/lmdeploy.git -b 83a1105a9c7fc0ce22aaa4be84ab28697d73a65f ${{ env.LMDEPLOY_PATH }}
           cd ${{ env.LMDEPLOY_PATH }} && git apply /data2/wugeshui/GitHub/patchs/fix-exit-multi-npu.patch
 
   Tests:
