--- a/tests/e2e/config.yaml
+++ b/tests/e2e/config.yaml
@@ -8,3 +8,4 @@ pytorch_chat_model:
     - internlm_model_data/internlm2-chat-7b
     - llama_model_data/llama-2-7b-chat-hf
     - mixtral_model_data/Mixtral-8x7B-Instruct-v0.1
+    - qwen_model_data/Qwen2-7B-Instruct
