--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -39,7 +39,7 @@ jobs:
       - name: Move code to custom directory
         run: |
           set -ex
-          mv $GITHUB_WORKSPACE/* ${{ env.CI_PATH }}/
+          mv $GITHUB_WORKSPACE/* $GITHUB_WORKSPACE/.* ${{ env.CI_PATH }}/
 
       - name: Build and install InferExt
         run: |
@@ -63,7 +63,7 @@ jobs:
           set -ex
           git clone https://github.com/DeepLink-org/lmdeploy.git -b infer_ext ${{ env.LMDEPLOY_PATH }}
           cd ${{ env.LMDEPLOY_PATH }} && git checkout 83a1105a9c7fc0ce22aaa4be84ab28697d73a65f
-          git apply /data2/wugeshui/GitHub/patchs/fix-exit-multi-npu.patch
+          git apply ${{env.CI_PATH }}/.github/ci/fix-exit-multi-npu.patch
 
   Tests:
     runs-on: pjlab_ascend_910B
