ci:updaload patch for lmdeploy

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -39,8 +39,9 @@ jobs:
       - name: Move code to custom directory
         run: |
           set -ex
-          mv $GITHUB_WORKSPACE/* $GITHUB_WORKSPACE/.* ${{ env.CI_PATH }}/
-
+          mv $GITHUB_WORKSPACE/* ${{ env.CI_PATH }}/
+          mv $GITHUB_WORKSPACE/.* ${{ env.CI_PATH }}/
+          
       - name: Build and install InferExt
         run: |
           set -ex
