--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -81,7 +81,8 @@ jobs:
           export INFEREXT_TEST_DIR=${{env.CI_PATH }}/tests 
           echo $PYTHONPATH && pwd
           pytest ./ -s -x --alluredir=allure-results --clean-alluredir
-          python ./test_model_tp2.py
+          python ./test_model_tp2.py --model_type=chat --device_type=ascend
+          python ./test_model_tp2.py --model_type=vl --device_type=ascend
 
       - name: Generate reports
         if: always()
