--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -63,7 +63,7 @@ jobs:
         run: |
           set -ex
           git clone https://github.com/DeepLink-org/lmdeploy.git -b infer_ext ${{ env.LMDEPLOY_PATH }}
-          cd ${{ env.LMDEPLOY_PATH }} && git checkout 83a1105a9c7fc0ce22aaa4be84ab28697d73a65f
+          cd ${{ env.LMDEPLOY_PATH }} && git checkout 6908c6b086d6f24693435e4f079baeb27618678d
           git apply ${{env.CI_PATH }}/.github/ci/fix-exit-multi-npu.patch
 
   Tests:
@@ -81,7 +81,8 @@ jobs:
           export INFEREXT_TEST_DIR=${{env.CI_PATH }}/tests 
           echo $PYTHONPATH && pwd
           pytest ./ -s -x --alluredir=allure-results --clean-alluredir
-          python ./test_model_tp2.py
+          python ./test_model_tp2.py --model_type=chat --device_type=ascend
+          python ./test_model_tp2.py --model_type=vl --device_type=ascend
 
       - name: Generate reports
         if: always()
