--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,7 +11,7 @@ on:
 env:
   CI_PATH: '/data2/wugeshui/GitHub/${{ github.repository }}/${GITHUB_RUN_NUMBER}'
   LMDEPLOY_PATH: '/data2/wugeshui/GitHub/lmdeploy'
-  LMDEPLOY_COMMIT_OR_BRANCH: '6908c6b086d6f24693435e4f079baeb27618678d'
+  LMDEPLOY_COMMIT_OR_BRANCH: '8511b88c31d1de0e19c604b3b09b2ce1945e3ecd'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -63,7 +63,7 @@ jobs:
       - name: Clone lmdeploy
         run: |
           set -ex
-          git clone https://github.com/DeepLink-org/lmdeploy.git -b dlinfer ${{ env.LMDEPLOY_PATH }}
+          git clone https://github.com/DeepLink-org/lmdeploy.git ${{ env.LMDEPLOY_PATH }}
           cd ${{ env.LMDEPLOY_PATH }} && git checkout ${{ env.LMDEPLOY_COMMIT_OR_BRANCH }}
           git apply ${{env.CI_PATH }}/.github/ci/fix-exit-multi-npu.patch
 
