--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -83,7 +83,7 @@ jobs:
           cd ${{env.CI_PATH }}/tests/
           export DLINFER_TEST_DIR=${{env.CI_PATH }}/tests
           echo $PYTHONPATH && pwd
-          pytest ./ -s -x --alluredir=allure-results --clean-alluredir
+          pytest ./test_lmdeploy/ -s -x --alluredir=allure-results --clean-alluredir
           python ./test_lmdeploy/test_model_tp2.py --model_type=chat --device_type=ascend
           python ./test_lmdeploy/test_model_tp2.py --model_type=vl --device_type=ascend
 
