--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -81,11 +81,11 @@ jobs:
           source /usr/local/Ascend/ascend-toolkit/set_env.sh
           export PYTHONPATH=${{env.LMDEPLOY_PATH }}:$PYTHONPATH
           cd ${{env.CI_PATH }}/tests/
-          export DLINFER_TEST_DIR=${{env.CI_PATH }}/tests
+          export DLINFER_TEST_DIR=${{env.CI_PATH }}/tests/test_lmdeploy
           echo $PYTHONPATH && pwd
-          pytest ./test_lmdeploy/ -s -x --alluredir=allure-results --clean-alluredir
-          python ./test_lmdeploy/test_model_tp2.py --model_type=chat --device_type=ascend
-          python ./test_lmdeploy/test_model_tp2.py --model_type=vl --device_type=ascend
+          pytest ./ -s -x --alluredir=allure-results --clean-alluredir
+          python ./test_model_tp2.py --model_type=chat --device_type=ascend
+          python ./test_model_tp2.py --model_type=vl --device_type=ascend
 
       - name: Generate reports
         if: always()
