--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -84,8 +84,9 @@ jobs:
           export DLINFER_TEST_DIR=${{env.CI_PATH }}/tests
           echo $PYTHONPATH && pwd
           pytest ./ -s -x --alluredir=allure-results --clean-alluredir
-          python ./test_model_tp2.py --model_type=chat --device_type=ascend
-          python ./test_model_tp2.py --model_type=vl --device_type=ascend
+          cd ..
+          python ./e2e/test_model_tp2.py --model_type=chat --device_type=ascend
+          python ./e2e/test_model_tp2.py --model_type=vl --device_type=ascend
 
       - name: Generate reports
         if: always()
