--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -80,12 +80,12 @@ jobs:
           set -ex
           source /usr/local/Ascend/ascend-toolkit/set_env.sh
           export PYTHONPATH=${{env.LMDEPLOY_PATH }}:$PYTHONPATH
-          cd ${{env.CI_PATH }}/tests/test_lmdeploy
+          cd ${{env.CI_PATH }}/tests/test_lmdeploy/e2e
           export DLINFER_TEST_DIR=${{env.CI_PATH }}/tests 
           echo $PYTHONPATH && pwd
           pytest ./ -s -x --alluredir=allure-results --clean-alluredir
-          python ./e2e/test_model_tp2.py --model_type=chat --device_type=ascend
-          python ./e2e/test_model_tp2.py --model_type=vl --device_type=ascend
+          python ./test_model_tp2.py --model_type=chat --device_type=ascend
+          python ./test_model_tp2.py --model_type=vl --device_type=ascend
 
       - name: Generate reports
         if: always()
