--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -80,12 +80,12 @@ jobs:
           set -ex
           source /usr/local/Ascend/ascend-toolkit/set_env.sh
           export PYTHONPATH=${{env.LMDEPLOY_PATH }}:$PYTHONPATH
-          cd ${{env.CI_PATH }}/tests/e2e
-          export DLINFER_TEST_DIR=${{env.CI_PATH }}/tests 
+          cd ${{env.CI_PATH }}/tests/test_lmdeploy
+          export DLINFER_TEST_DIR=${{env.CI_PATH }}/tests
           echo $PYTHONPATH && pwd
           pytest ./ -s -x --alluredir=allure-results --clean-alluredir
-          python ./test_model_tp2.py --model_type=chat --device_type=ascend
-          python ./test_model_tp2.py --model_type=vl --device_type=ascend
+          python ./e2e/test_model_tp2.py --model_type=chat --device_type=ascend
+          python ./e2e/test_model_tp2.py --model_type=vl --device_type=ascend
 
       - name: Generate reports
         if: always()
@@ -93,7 +93,7 @@ jobs:
           export date_today="$(date +'%Y%m%d-%H%M%S')"
           export report_dir="$REPORT_DIR/$date_today"
           echo "Save report to $report_dir"
-          cd ${{env.CI_PATH }}/tests/e2e
+          cd ${{env.CI_PATH }}/tests/test_lmdeploy
           mv allure-results $report_dir
 
       - name: Clear workfile
