--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -84,6 +84,10 @@ jobs:
           cd ${{env.CI_PATH }}/tests
           export DLINFER_TEST_DIR=${{env.CI_PATH }}/tests
           echo $PYTHONPATH && pwd
+          echo "======================================"
+          python -c "import lmdeploy;print(lmdeploy.__file__)"
+          python -c "import dlinfer;print(dlinfer.__file__)"
+          echo "======================================"
           pytest ./ -m 'lmdeploy' -s -x --alluredir=allure-results --clean-alluredir
           python ./test_lmdeploy/e2e/test_model_tp2.py --model_type=chat --device_type=ascend
           python ./test_lmdeploy/e2e/test_model_tp2.py --model_type=vl --device_type=ascend
