--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,7 +12,7 @@ on:
 env:
   CI_PATH: '/data2/wugeshui/GitHub/${{ github.repository }}/${GITHUB_RUN_NUMBER}'
   LMDEPLOY_PATH: '/data2/wugeshui/GitHub/lmdeploy'
-  LMDEPLOY_COMMIT_OR_BRANCH: '2baaf71e1df11ab2e93d2975f4acd5720163665a'
+  LMDEPLOY_COMMIT_OR_BRANCH: 'main'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
