--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,14 +13,16 @@ env:
   CI_PATH: '/data2/wugeshui/GitHub/${{ github.repository }}/${GITHUB_RUN_NUMBER}'
   LMDEPLOY_PATH: '/data2/wugeshui/GitHub/lmdeploy'
   LMDEPLOY_COMMIT_OR_BRANCH: 'main'
+  REPORT_DIR: /data2/wugeshui/GitHub/ci_log/test_reports
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
-  CloneAndBuild:
+  AscendEndtoEndTests:
     runs-on: Atlas_800T_A2
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -43,7 +45,7 @@ jobs:
         run: |
           set -ex
           mv $GITHUB_WORKSPACE/* ${{ env.CI_PATH }}/
-          mv $GITHUB_WORKSPACE/.github ${{ env.CI_PATH }}/
+          mv $GITHUB_WORKSPACE/.github ${{ env.CI_PATH }}/    
 
       - name: Build and install dlinfer
         run: |
@@ -70,12 +72,6 @@ jobs:
           cd ${{ env.LMDEPLOY_PATH }} && git checkout ${{ env.LMDEPLOY_COMMIT_OR_BRANCH }}
           # git apply ${{env.CI_PATH }}/.github/ci/fix-exit-multi-npu.patch
 
-  Tests:
-    runs-on: Atlas_800T_A2
-    needs: [CloneAndBuild]
-    env:
-      REPORT_DIR: /data2/wugeshui/GitHub/ci_log/test_reports
-    steps:
       - name: RunTests
         run: |
           set -ex
@@ -97,12 +93,8 @@ jobs:
           cd ${{env.CI_PATH }}/tests
           mv allure-results $report_dir
 
-  Cleanup:
-    runs-on: Atlas_800T_A2
-    needs: [CloneAndBuild, Tests]
-    if: always()
-    steps:  
       - name: Uninstall dlinfer
+        if: always()
         run: |
           pip uninstall -y dlinfer-ascend
 
@@ -113,6 +105,6 @@ jobs:
           cd ..
           rm -rf $workdir
           mkdir $workdir
-          chmod -R 777 $workdir    
+          chmod -R 777 $workdir  
 
   
