--- a/tests/test_lmdeploy/e2e/config.yaml
+++ b/tests/test_lmdeploy/e2e/config.yaml
@@ -3,13 +3,22 @@ log_path: /data2/wugeshui/GitHub/ci_log/logs
 
 tp_config:
     Mixtral-8x7B-Instruct-v0.1: 2
+    internlm2-chat-20b: 2
+    internlm2_5-20b-chat: 2
     InternVL-Chat-V1-5: 2
+    cogvlm2-llama3-chat-19B: 2
 
 pytorch_chat_model:
     - llama_model_data/llama-2-7b-chat-hf
-    - internlm_model_data/internlm2-chat-7b
+    - llama_model_data/Meta-Llama-3-8B-Instruct
+    - internlm_model_data/internlm2-chat-20b
+    - internlm_model_data/internlm2_5-20b-chat
     - mixtral_model_data/Mixtral-8x7B-Instruct-v0.1
     - qwen_model_data/Qwen2-7B-Instruct
+    - qwen_model_data/Qwen-14B-Chat
 
 pytorch_vl_model:
     - internvl_model_data/InternVL-Chat-V1-5
+    - internvl_model_data/InternVL2-2B
+    - cogvlm_model_data/cogvlm-chat
+    - cogvlm_model_data/cogvlm2-llama3-chat-19B
