--- a/tests/test_lmdeploy/e2e/config.yaml
+++ b/tests/test_lmdeploy/e2e/config.yaml
@@ -1,11 +1,12 @@
 model_path: /data2/share_data
-log_path: /data2/wugeshui/GitHub/ci_log/logs
+log_path: /data2/weitao/profile
 
 tp_config:
     Mixtral-8x7B-Instruct-v0.1: 2
-    InternVL-Chat-V1-5: 2
     internlm2-chat-20b: 2
     internlm2_5-20b-chat: 2
+    InternVL-Chat-V1-5: 2
+    cogvlm2-llama3-chat-19B: 2
 
 pytorch_chat_model:
     - llama_model_data/llama-2-7b-chat-hf
@@ -21,4 +22,3 @@ pytorch_vl_model:
     - internvl_model_data/InternVL2-2B
     - cogvlm_model_data/cogvlm-chat
     - cogvlm_model_data/cogvlm2-llama3-chat-19B
-    - glm_model_data/glm-4v-9b
