--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -81,8 +81,7 @@ jobs:
           export DLINFER_TEST_DIR=${{env.CI_PATH }}/tests
           echo $PYTHONPATH && pwd
           pytest ./ -m 'lmdeploy' -s -x --alluredir=allure-results --clean-alluredir
-          python ./test_lmdeploy/e2e/test_model_tp2.py --model_type=chat --device_type=ascend
-          python ./test_lmdeploy/e2e/test_model_tp2.py --model_type=vl --device_type=ascend
+          bash ${{env.CI_PATH }}/tests/test_lmdeploy/scripts/test_model_tp2.sh
 
       - name: Generate reports
         if: always()
