ci: only run e2e test on origin repo

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,7 @@ concurrency:
 
 jobs:
   AscendEndtoEndTests:
+    if: github.repository == 'DeepLink-org/dlinfer'
     runs-on: Atlas_800T_A2
 
     steps:
