--- a/tests/test_lmdeploy/e2e/config.yaml
+++ b/tests/test_lmdeploy/e2e/config.yaml
@@ -8,6 +8,10 @@ tp_config:
     InternVL-Chat-V1-5: 2
     cogvlm2-llama3-chat-19B: 2
 
+graph_config:
+    Qwen2-7B-Instruct: True
+    Meta-Llama-3-8B-Instruct: True
+
 pytorch_chat_model:
     - llama_model_data/llama-2-7b-chat-hf
     - llama_model_data/Meta-Llama-3-8B-Instruct
