--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,10 +10,12 @@ on:
       - main
 
 env:
-  CI_PATH: '/data2/wugeshui/GitHub/${{ github.repository }}/${GITHUB_RUN_NUMBER}'
-  LMDEPLOY_PATH: '/data2/wugeshui/GitHub/lmdeploy'
+  CI_PATH: "${HOME}/GitHub/${{ github.repository }}/${GITHUB_RUN_NUMBER}"
+  LMDEPLOY_PATH: "${HOME}/GitHub/lmdeploy"
   LMDEPLOY_COMMIT_OR_BRANCH: 'main'
-  REPORT_DIR: /data2/wugeshui/GitHub/ci_log/test_reports
+  REPORT_DIR: "${HOME}/GitHub/ci_log/test_reports"
+  TEST_LMDEPLOY_E2E_LOG_PATH: "${HOME}/Github/ci_log/logs"
+  TEST_LMDEPLOY_E2E_MODEL_PATH: "${HOME}/Github/model"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
