--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,10 +10,14 @@ on:
       - main
 
 env:
-  CI_PATH: '/data2/wugeshui/GitHub/${{ github.repository }}/${GITHUB_RUN_NUMBER}'
-  LMDEPLOY_PATH: '/data2/wugeshui/GitHub/lmdeploy'
+  CI_PATH: "${HOME}/GitHub/${{ github.repository }}/${GITHUB_RUN_NUMBER}"
+  LMDEPLOY_PATH: "${HOME}/GitHub/lmdeploy"
   LMDEPLOY_COMMIT_OR_BRANCH: 'main'
-  REPORT_DIR: /data2/wugeshui/GitHub/ci_log/test_reports
+  REPORT_DIR: "${HOME}/GitHub/ci_log/test_reports"
+  TEST_LMDEPLOY_E2E_LOG_PATH: "${HOME}/Github/ci_log/logs"
+  TEST_LMDEPLOY_E2E_MODEL_PATH: "${HOME}/Github/model"
+  TEST_LMDEPLOY_E2E_LOCAL_PIC1: "${HOME}/Github/pic/tiger.jpeg"
+  TEST_LMDEPLOY_E2E_LOCAL_PIC2: "${HOME}/Github/pic/human-pose.jpg"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -89,8 +93,11 @@ jobs:
       - name: Generate reports
         if: always()
         run: |
+          if [ ! -d ${{ env.REPORT_DIR }} ]; then
+            mkdir -p ${{ env.REPORT_DIR }}
+          fi
           export date_today="$(date +'%Y%m%d-%H%M%S')"
-          export report_dir="$REPORT_DIR/$date_today"
+          export report_dir="${{ env.REPORT_DIR }}/$date_today"
           echo "Save report to $report_dir"
           cd ${{env.CI_PATH }}/tests
           mv allure-results $report_dir
