add qwen2vl in ci

--- a/tests/test_lmdeploy/e2e/config.yaml
+++ b/tests/test_lmdeploy/e2e/config.yaml
@@ -14,6 +14,7 @@ pytorch_chat_model:
     - mixtral_model_data/Mixtral-8x7B-Instruct-v0.1
     - qwen_model_data/Qwen2.5-7B-Instruct
     # - qwen_model_data/Qwen-14B-Chat
+    - qwen_model_data/Qwen2-VL-7B-Instruct
 
 pytorch_vl_model:
     - internvl_model_data/InternVL2-26B
