[ascend] fix qwen2_vl graph_mode (#163)

--- a/tests/test_lmdeploy/e2e/config.yaml
+++ b/tests/test_lmdeploy/e2e/config.yaml
@@ -8,6 +8,7 @@ graph_config:
     Meta-Llama-3-8B-Instruct: True
     Mixtral-8x7B-Instruct-v0.1: True
     Qwen2.5-7B-Instruct: True
+    Qwen2-VL-7B-Instruct: True
 
 pytorch_chat_model:
     - llama_model_data/Meta-Llama-3-8B-Instruct
